fix cookie spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,6 @@ a.link:focus {
   background: rgba(0,0,0,.6);
   color: #FFFFFF;
   padding: 20px;
-  justify-content: space-between;
   box-sizing: border-box;
 }
 
@@ -122,6 +121,8 @@ a.link:focus {
   border: none;
   color: #FFFFFF;
   font-size: 1rem;
+  padding: 0;
+  font-weight: 400;
 }
 
 .cookie-notice__wrapper {
@@ -133,6 +134,7 @@ a.link:focus {
   display: -ms-flexbox;
   display: flex;
   padding: 0 15px;
+  box-sizing: border-box;
 }
 
 .cookie-notice p {
@@ -179,7 +181,7 @@ a.link:focus {
   }
 
   .cookie-notice__wrapper {
-    max-width: 950px;
+    max-width: 76rem;
   }
 
   body {
